--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* ============= GERAL ================*/
-* , *::before, *::after {
-  box-sizing: border-box; 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -12,12 +14,11 @@
 
   --headline: hsl(220, 6%, 91%);
   --paragraph: hsl(210, 4%, 60%);
-  --main-paragraph: hsl(220,100%,100%);
+  --main-paragraph: hsl(220, 100%, 100%);
   --brand-light: hsl(152, 100%, 50%);
-  --brand-light-alternation: hsl(0,100%,50%);
+  --brand-light-alternation: hsl(0, 100%, 50%);
 
   font-size: 62.5%; /*1rem == 10px */
-
 }
 
 html {
@@ -33,8 +34,8 @@ body {
 body {
   background-color: var(--bg-primary-color);
   color: var(--main-paragraph);
-  
-  font-family:'Poppins';
+
+  font-family: 'Poppins';
   font-size: 1.4rem;
 
   overflow: overlay;
@@ -85,7 +86,6 @@ header#mobile {
   background-color: var(--bg-secondary-color);
 }
 
-
 /* ===== SVG ALTERATION =====*/
 #backToTopButton circle {
   fill: var(--bg-primary-color);
@@ -98,7 +98,6 @@ header#mobile {
 #left_side .social_media path {
   fill: var(--brand-light);
 }
-
 
 /*======= SCROLLBAR ========*/
 ::-webkit-scrollbar {
@@ -119,7 +118,7 @@ header#mobile {
 footer span a,
 .type_contact a,
 .social_media a,
-.header a{
+.header a {
   position: relative;
 }
 
@@ -127,21 +126,21 @@ footer span a::before,
 .type_contact a::before,
 .social_media a::before,
 .header a::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 0.2rem;
-    border-radius: 0.4rem;
-    background-color: var(--brand-light);
-    bottom: 0;
-    left: 0;
-    transform-origin: right;
-    transform: scaleX(0);
-    transition: transform .3s ease-in-out;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 0.2rem;
+  border-radius: 0.4rem;
+  background-color: var(--brand-light);
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
 }
 
 footer span a:hover::before,
-.type_contact a:hover::before,  
+.type_contact a:hover::before,
 .social_media a:hover::before,
 .header a:hover::before {
   transform-origin: left;
@@ -156,7 +155,7 @@ footer span a:hover::before,
   box-shadow: 0 0.5rem 0.5rem -0.3rem var(--brand-light);
   transform: translateY(-0.25rem);
   transition-duration: 0.3s;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 /*================= NAVIGATION HEADER ================*/
@@ -173,11 +172,10 @@ footer span a:hover::before,
   margin-bottom: 2rem;
 }
 
-#navigation .navigation_header ul{
+#navigation .navigation_header ul {
   display: flex;
   flex: 2;
   gap: 3rem;
-  
 }
 
 #navigation .meu_logo {
@@ -187,8 +185,6 @@ footer span a:hover::before,
   font-weight: 900;
   font-size: 2rem;
   line-height: 3rem;
-
-
 }
 
 span.brand_light {
@@ -203,12 +199,16 @@ section#home {
   padding: 2rem 10%;
   display: flex;
   width: 100%;
-  flex-direction: row;    
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   flex-wrap: nowrap;
   margin-bottom: 10rem;
-  background: radial-gradient(50% 50% at 55% 50%, var(--bg-transition-color) 25%, var(--bg-primary-color)90%);
+  background: radial-gradient(
+    50% 50% at 55% 50%,
+    var(--bg-transition-color) 25%,
+    var(--bg-primary-color) 90%
+  );
   min-height: 50rem;
 }
 
@@ -217,17 +217,24 @@ section#home {
   border-right: 0.3rem solid var(--brand-light); /*O cursor*/
   white-space: nowrap; /*Deixa o conteúdo em uma linha só*/
   letter-spacing: 0.4rem; /*Espaçamento das Letras*/
-  animation: 
-    typing 3.5s steps(45,end),
-    blink-caret .75s step-end infinite;
+  animation: typing 3.5s steps(45, end), blink-caret 0.75s step-end infinite;
 }
 @keyframes typing {
-  from { width: 0 }
-  to { width: 72% } 
+  from {
+    width: 0;
+  }
+  to {
+    width: 72%;
+  }
 }
 @keyframes blink-caret {
-  from, to {border-color: transparent}
-  50% {border-color: var(--brand-light)}
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: var(--brand-light);
+  }
 }
 
 .content span {
@@ -248,14 +255,12 @@ section#home {
   font-family: Orbitron;
   font-size: 3rem;
   font-weight: 700;
-
 }
 .content p {
   text-align: justify;
   font-weight: 200;
   line-height: 2.5rem;
   max-width: 55rem;
-
 }
 
 .home_button {
@@ -263,16 +268,15 @@ section#home {
   height: 4rem;
 
   font-family: Orbitron;
-  
+
   background-color: var(--bg-primary-color);
 
   border-color: var(--brand-light);
   border: 0.13rem solid var(--brand-light);
   border-radius: 0.3rem;
-  
+
   margin: 1.5rem 0;
 }
-
 
 button a {
   color: var(--brand-light);
@@ -280,7 +284,7 @@ button a {
 }
 
 #header_photo {
-  background-image: url(/portfolio/JonGlazkov.github.io/assets/uteis/portfolio-background-photo.png);
+  background-image: url(/assets/uteis/portfolio-background-photo.png);
   background-size: contain;
   background-repeat: no-repeat;
   width: 45rem;
@@ -290,27 +294,27 @@ button a {
 /*===============  ABOUT ================*/
 
 section#about::before {
-  background-image: url(/portfolio/JonGlazkov.github.io/assets/uteis/background.png);
+  background-image: url(/assets/uteis/background.png);
   background-size: fill;
   background-color: var(--bg-secondary-color);
   background-repeat: repeat-x;
   background-position: top;
-  
+
   width: 100%;
   height: 17rem;
-  content: " ";
+  content: ' ';
 }
 
 section#about::after {
-  background-image: url(/portfolio/JonGlazkov.github.io/assets/uteis/background.png);
+  background-image: url(/assets/uteis/background.png);
   background-size: fill;
   background-color: var(--bg-secondary-color);
   background-repeat: repeat-x;
   background-position: bottom;
-  
+
   width: 100%;
   height: 17rem;
-  content: " ";
+  content: ' ';
 }
 
 section#about {
@@ -328,9 +332,8 @@ section#about {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  
-  width: 100%;
 
+  width: 100%;
 
   padding: 0 5%;
 }
@@ -339,7 +342,7 @@ section#about {
   min-width: 25rem;
   max-width: 40rem;
   width: 20%;
-  
+
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -348,13 +351,13 @@ section#about {
   gap: 1rem;
 }
 
-#left_side img{
+#left_side img {
   width: 20rem;
   height: 20rem;
-  
+
   border-radius: 50%;
   border: 0.35rem solid var(--brand-light);
-  
+
   padding: 0.5rem;
   margin: 0 auto;
 
@@ -385,7 +388,6 @@ section#about {
   color: var(--brand-light);
 }
 
-
 .about h2,
 .about_content #right_side h2 {
   font-family: Orbitron;
@@ -398,9 +400,8 @@ section#about {
   letter-spacing: 0.1rem;
   font-size: 1.6rem;
   font-weight: 300;
-  text-align:justify;
+  text-align: justify;
   justify-content: space-around;
-
 }
 
 /*================= SKILLS =================*/
@@ -426,7 +427,7 @@ div.skill {
   flex-direction: column;
   flex: 1 0 22%;
   margin: 2rem 0rem;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 div.skill:hover {
   transform: scale(1.2);
@@ -444,7 +445,7 @@ span.skill_name {
   margin-bottom: 1.5rem;
 }
 
-/* ================ PORTFOLIO ================= */
+/* ================ PORTFOLIO  ================= */
 
 section#portfolio {
   margin-top: 5%;
@@ -457,7 +458,7 @@ section#portfolio {
 div#projects {
   display: flex;
   flex-wrap: wrap;
-  
+
   width: 100%;
   padding: 5rem 0;
   justify-content: space-around;
@@ -519,7 +520,7 @@ div.languages {
 span.language {
   border: 0.2rem solid var(--brand-light);
   color: var(--brand-light);
-  
+
   padding: 0 1rem;
 
   box-sizing: border-box;
@@ -540,7 +541,7 @@ span.language:hover {
   display: flex;
   flex-direction: column;
   padding: 0 3rem;
-  
+
   gap: 2rem;
 }
 
@@ -554,16 +555,16 @@ span.language:hover {
 
 .access_button {
   display: flex;
-  
+
   margin-top: 1rem;
-  
+
   border-radius: 0.5rem;
   align-items: center;
   justify-content: center;
-  
+
   width: 18rem;
   height: 4rem;
-  
+
   letter-spacing: 0.1rem;
   font-family: Orbitron;
   font-weight: 500;
@@ -571,10 +572,8 @@ span.language:hover {
   line-height: 2.7rem;
   text-transform: uppercase;
 
-  color: var(--brand-light) !important; 
+  color: var(--brand-light) !important;
   background: var(--bg-primary-color);
-
-  
 }
 /* ===========  CONTACT ===============*/
 
@@ -600,7 +599,6 @@ section#contact p {
   flex-wrap: wrap;
 
   margin: 0 auto;
-  
 }
 .type_contact {
   display: flex;
@@ -611,7 +609,6 @@ section#contact p {
 .type_contact svg {
   width: 5rem;
   height: 5rem;
-  
 }
 
 .type_contact a {
@@ -665,13 +662,3 @@ footer span a {
   visibility: visible;
   transform: translateY(0);
 }
-
-
-
-
-
-
-
-
-
-
